<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/etConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btn_register" />


        <TextView
            android:id="@+id/tvOr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/or_register_with" />

        <!-- GitHub -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegisterGitHub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/btn_register_github"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:backgroundTint="#24292E"
            app:cornerRadius="8dp"
            app:iconPadding="8dp"
            app:iconGravity="textStart"
            app:rippleColor="#334A4A4A"
            app:icon="@drawable/ic_github"
            app:iconTint="#FFFFFF"
            />
        <!-- Facebook -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegisterFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/btn_register_facebook"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:backgroundTint="#1877F2"
            app:cornerRadius="8dp"
            app:iconPadding="8dp"
            app:iconGravity="textStart"
            app:rippleColor="#332255FF"
            app:icon="@drawable/ic_facebook"
            app:iconTint="#FFFFFF"
            />

    </LinearLayout>
</ScrollView>
